implemented notification and gateway service